reference/parser.output
Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_GLOB_ITEM_LIST

    2 NT_LEFT_TYPE: TM_INTTYPE
    3             | TM_CHARTYPE
    4             | TM_IDENT
    5             | TM_STRUCT TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
    6             | TM_STRUCT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
    7             | TM_STRUCT TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE
    8             | TM_STRUCT TM_LEFT_BRACE TM_RIGHT_BRACE
    9             | TM_STRUCT TM_IDENT
   10             | TM_UNION TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   11             | TM_UNION TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   12             | TM_UNION TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE
   13             | TM_UNION TM_LEFT_BRACE TM_RIGHT_BRACE
   14             | TM_UNION TM_IDENT
   15             | TM_ENUM TM_IDENT TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   16             | TM_ENUM TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   17             | TM_ENUM TM_IDENT

   18 NT_FIELD_LIST: NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL
   19              | NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL NT_FIELD_LIST

   20 NT_ARGUMENT_TYPE_LIST: NT_LEFT_TYPE NT_ANNON_RIGHT_TYPE_EXPR TM_COMMA NT_ARGUMENT_TYPE_LIST
   21                      | NT_LEFT_TYPE NT_ANNON_RIGHT_TYPE_EXPR
   22                      | NT_LEFT_TYPE
   23                      | NT_LEFT_TYPE TM_COMMA NT_ARGUMENT_TYPE_LIST

   24 NT_ENUM_ELE_LIST: TM_IDENT
   25                 | TM_IDENT TM_COMMA NT_ENUM_ELE_LIST

   26 NT_NAMED_RIGHT_TYPE_EXPR: TM_IDENT
   27                         | TM_POINTER NT_NAMED_RIGHT_TYPE_EXPR
   28                         | NT_NAMED_RIGHT_TYPE_EXPR TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET
   29                         | NT_NAMED_RIGHT_TYPE_EXPR TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   30                         | NT_NAMED_RIGHT_TYPE_EXPR TM_LEFT_PAREN TM_RIGHT_PAREN
   31                         | TM_LEFT_PAREN NT_NAMED_RIGHT_TYPE_EXPR TM_RIGHT_PAREN

   32 NT_ANNON_RIGHT_TYPE_EXPR: TM_POINTER
   33                         | TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET
   34                         | TM_LEFT_PAREN TM_RIGHT_PAREN
   35                         | TM_POINTER NT_ANNON_RIGHT_TYPE_EXPR
   36                         | NT_ANNON_RIGHT_TYPE_EXPR TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET
   37                         | NT_ANNON_RIGHT_TYPE_EXPR TM_LEFT_PAREN TM_RIGHT_PAREN
   38                         | NT_ANNON_RIGHT_TYPE_EXPR TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   39                         | TM_LEFT_PAREN NT_ANNON_RIGHT_TYPE_EXPR TM_RIGHT_PAREN
   40                         | TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN

   41 NT_GLOB_ITEM_LIST: NT_GLOB_ITEM
   42                  | NT_GLOB_ITEM NT_GLOB_ITEM_LIST

   43 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE TM_SEMICOL
   44             | TM_STRUCT TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
   45             | TM_STRUCT TM_IDENT TM_SEMICOL
   46             | TM_UNION TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
   47             | TM_UNION TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE TM_SEMICOL
   48             | TM_UNION TM_IDENT TM_SEMICOL
   49             | TM_ENUM TM_IDENT TM_SEMICOL
   50             | TM_ENUM TM_IDENT TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE TM_SEMICOL
   51             | TM_TYPEDEF NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL
   52             | NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL


Terminals, with rules where they appear

$end (0) 0
error (256)
TM_NAT (258) 28 33 36
TM_IDENT (259) 4 5 7 9 10 12 14 15 17 24 25 26 43 44 45 46 47 48 49
    50
TM_LEFT_PAREN (260) 29 30 31 34 37 38 39 40
TM_RIGHT_PAREN (261) 29 30 31 34 37 38 39 40
TM_RIGHT_BRACKET (262) 28 33 36
TM_LEFT_BRACKET (263) 28 33 36
TM_LEFT_BRACE (264) 5 6 7 8 10 11 12 13 15 16 43 44 46 47 50
TM_RIGHT_BRACE (265) 5 6 7 8 10 11 12 13 15 16 43 44 46 47 50
TM_SEMICOL (266) 18 19 43 44 45 46 47 48 49 50 51 52
TM_COMMA (267) 20 23 25
TM_POINTER (268) 27 32 35
TM_STRUCT (269) 5 6 7 8 9 43 44 45
TM_UNION (270) 10 11 12 13 14 46 47 48
TM_ENUM (271) 15 16 17 49 50
TM_TYPEDEF (272) 51
TM_INTTYPE (273) 2
TM_CHARTYPE (274) 3


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
NT_WHOLE (21)
    on left: 1, on right: 0
NT_LEFT_TYPE (22)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17, on right: 18
    19 20 21 22 23 51 52
NT_FIELD_LIST (23)
    on left: 18 19, on right: 5 6 10 11 19 44 46
NT_ARGUMENT_TYPE_LIST (24)
    on left: 20 21 22 23, on right: 20 23 29 38 40
NT_ENUM_ELE_LIST (25)
    on left: 24 25, on right: 15 16 25 50
NT_NAMED_RIGHT_TYPE_EXPR (26)
    on left: 26 27 28 29 30 31, on right: 18 19 27 28 29 30 31 51 52
NT_ANNON_RIGHT_TYPE_EXPR (27)
    on left: 32 33 34 35 36 37 38 39 40, on right: 20 21 35 36 37 38
    39
NT_GLOB_ITEM_LIST (28)
    on left: 41 42, on right: 1 42
NT_GLOB_ITEM (29)
    on left: 43 44 45 46 47 48 49 50 51 52, on right: 41 42


state 0

    0 $accept: . NT_WHOLE $end

    TM_IDENT     shift, and go to state 1
    TM_STRUCT    shift, and go to state 2
    TM_UNION     shift, and go to state 3
    TM_ENUM      shift, and go to state 4
    TM_TYPEDEF   shift, and go to state 5
    TM_INTTYPE   shift, and go to state 6
    TM_CHARTYPE  shift, and go to state 7

    NT_WHOLE           go to state 8
    NT_LEFT_TYPE       go to state 9
    NT_GLOB_ITEM_LIST  go to state 10
    NT_GLOB_ITEM       go to state 11


state 1

    4 NT_LEFT_TYPE: TM_IDENT .

    $default  reduce using rule 4 (NT_LEFT_TYPE)


state 2

    5 NT_LEFT_TYPE: TM_STRUCT . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
    6             | TM_STRUCT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
    7             | TM_STRUCT . TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE
    8             | TM_STRUCT . TM_LEFT_BRACE TM_RIGHT_BRACE
    9             | TM_STRUCT . TM_IDENT
   43 NT_GLOB_ITEM: TM_STRUCT . TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE TM_SEMICOL
   44             | TM_STRUCT . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
   45             | TM_STRUCT . TM_IDENT TM_SEMICOL

    TM_IDENT       shift, and go to state 12
    TM_LEFT_BRACE  shift, and go to state 13


state 3

   10 NT_LEFT_TYPE: TM_UNION . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   11             | TM_UNION . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   12             | TM_UNION . TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE
   13             | TM_UNION . TM_LEFT_BRACE TM_RIGHT_BRACE
   14             | TM_UNION . TM_IDENT
   46 NT_GLOB_ITEM: TM_UNION . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
   47             | TM_UNION . TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE TM_SEMICOL
   48             | TM_UNION . TM_IDENT TM_SEMICOL

    TM_IDENT       shift, and go to state 14
    TM_LEFT_BRACE  shift, and go to state 15


state 4

   15 NT_LEFT_TYPE: TM_ENUM . TM_IDENT TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   16             | TM_ENUM . TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   17             | TM_ENUM . TM_IDENT
   49 NT_GLOB_ITEM: TM_ENUM . TM_IDENT TM_SEMICOL
   50             | TM_ENUM . TM_IDENT TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE TM_SEMICOL

    TM_IDENT       shift, and go to state 16
    TM_LEFT_BRACE  shift, and go to state 17


state 5

   51 NT_GLOB_ITEM: TM_TYPEDEF . NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL

    TM_IDENT     shift, and go to state 1
    TM_STRUCT    shift, and go to state 18
    TM_UNION     shift, and go to state 19
    TM_ENUM      shift, and go to state 20
    TM_INTTYPE   shift, and go to state 6
    TM_CHARTYPE  shift, and go to state 7

    NT_LEFT_TYPE  go to state 21


state 6

    2 NT_LEFT_TYPE: TM_INTTYPE .

    $default  reduce using rule 2 (NT_LEFT_TYPE)


state 7

    3 NT_LEFT_TYPE: TM_CHARTYPE .

    $default  reduce using rule 3 (NT_LEFT_TYPE)


state 8

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 22


state 9

   52 NT_GLOB_ITEM: NT_LEFT_TYPE . NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL

    TM_IDENT       shift, and go to state 23
    TM_LEFT_PAREN  shift, and go to state 24
    TM_POINTER     shift, and go to state 25

    NT_NAMED_RIGHT_TYPE_EXPR  go to state 26


state 10

    1 NT_WHOLE: NT_GLOB_ITEM_LIST .

    $default  reduce using rule 1 (NT_WHOLE)


state 11

   41 NT_GLOB_ITEM_LIST: NT_GLOB_ITEM .
   42                  | NT_GLOB_ITEM . NT_GLOB_ITEM_LIST

    TM_IDENT     shift, and go to state 1
    TM_STRUCT    shift, and go to state 2
    TM_UNION     shift, and go to state 3
    TM_ENUM      shift, and go to state 4
    TM_TYPEDEF   shift, and go to state 5
    TM_INTTYPE   shift, and go to state 6
    TM_CHARTYPE  shift, and go to state 7

    $default  reduce using rule 41 (NT_GLOB_ITEM_LIST)

    NT_LEFT_TYPE       go to state 9
    NT_GLOB_ITEM_LIST  go to state 27
    NT_GLOB_ITEM       go to state 11


state 12

    5 NT_LEFT_TYPE: TM_STRUCT TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
    7             | TM_STRUCT TM_IDENT . TM_LEFT_BRACE TM_RIGHT_BRACE
    9             | TM_STRUCT TM_IDENT .
   43 NT_GLOB_ITEM: TM_STRUCT TM_IDENT . TM_LEFT_BRACE TM_RIGHT_BRACE TM_SEMICOL
   44             | TM_STRUCT TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
   45             | TM_STRUCT TM_IDENT . TM_SEMICOL

    TM_LEFT_BRACE  shift, and go to state 28
    TM_SEMICOL     shift, and go to state 29

    $default  reduce using rule 9 (NT_LEFT_TYPE)


state 13

    6 NT_LEFT_TYPE: TM_STRUCT TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE
    8             | TM_STRUCT TM_LEFT_BRACE . TM_RIGHT_BRACE

    TM_IDENT        shift, and go to state 1
    TM_RIGHT_BRACE  shift, and go to state 30
    TM_STRUCT       shift, and go to state 18
    TM_UNION        shift, and go to state 19
    TM_ENUM         shift, and go to state 20
    TM_INTTYPE      shift, and go to state 6
    TM_CHARTYPE     shift, and go to state 7

    NT_LEFT_TYPE   go to state 31
    NT_FIELD_LIST  go to state 32


state 14

   10 NT_LEFT_TYPE: TM_UNION TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   12             | TM_UNION TM_IDENT . TM_LEFT_BRACE TM_RIGHT_BRACE
   14             | TM_UNION TM_IDENT .
   46 NT_GLOB_ITEM: TM_UNION TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
   47             | TM_UNION TM_IDENT . TM_LEFT_BRACE TM_RIGHT_BRACE TM_SEMICOL
   48             | TM_UNION TM_IDENT . TM_SEMICOL

    TM_LEFT_BRACE  shift, and go to state 33
    TM_SEMICOL     shift, and go to state 34

    $default  reduce using rule 14 (NT_LEFT_TYPE)


state 15

   11 NT_LEFT_TYPE: TM_UNION TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE
   13             | TM_UNION TM_LEFT_BRACE . TM_RIGHT_BRACE

    TM_IDENT        shift, and go to state 1
    TM_RIGHT_BRACE  shift, and go to state 35
    TM_STRUCT       shift, and go to state 18
    TM_UNION        shift, and go to state 19
    TM_ENUM         shift, and go to state 20
    TM_INTTYPE      shift, and go to state 6
    TM_CHARTYPE     shift, and go to state 7

    NT_LEFT_TYPE   go to state 31
    NT_FIELD_LIST  go to state 36


state 16

   15 NT_LEFT_TYPE: TM_ENUM TM_IDENT . TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   17             | TM_ENUM TM_IDENT .
   49 NT_GLOB_ITEM: TM_ENUM TM_IDENT . TM_SEMICOL
   50             | TM_ENUM TM_IDENT . TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE TM_SEMICOL

    TM_LEFT_BRACE  shift, and go to state 37
    TM_SEMICOL     shift, and go to state 38

    $default  reduce using rule 17 (NT_LEFT_TYPE)


state 17

   16 NT_LEFT_TYPE: TM_ENUM TM_LEFT_BRACE . NT_ENUM_ELE_LIST TM_RIGHT_BRACE

    TM_IDENT  shift, and go to state 39

    NT_ENUM_ELE_LIST  go to state 40


state 18

    5 NT_LEFT_TYPE: TM_STRUCT . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
    6             | TM_STRUCT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
    7             | TM_STRUCT . TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE
    8             | TM_STRUCT . TM_LEFT_BRACE TM_RIGHT_BRACE
    9             | TM_STRUCT . TM_IDENT

    TM_IDENT       shift, and go to state 41
    TM_LEFT_BRACE  shift, and go to state 13


state 19

   10 NT_LEFT_TYPE: TM_UNION . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   11             | TM_UNION . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   12             | TM_UNION . TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE
   13             | TM_UNION . TM_LEFT_BRACE TM_RIGHT_BRACE
   14             | TM_UNION . TM_IDENT

    TM_IDENT       shift, and go to state 42
    TM_LEFT_BRACE  shift, and go to state 15


state 20

   15 NT_LEFT_TYPE: TM_ENUM . TM_IDENT TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   16             | TM_ENUM . TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   17             | TM_ENUM . TM_IDENT

    TM_IDENT       shift, and go to state 43
    TM_LEFT_BRACE  shift, and go to state 17


state 21

   51 NT_GLOB_ITEM: TM_TYPEDEF NT_LEFT_TYPE . NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL

    TM_IDENT       shift, and go to state 23
    TM_LEFT_PAREN  shift, and go to state 24
    TM_POINTER     shift, and go to state 25

    NT_NAMED_RIGHT_TYPE_EXPR  go to state 44


state 22

    0 $accept: NT_WHOLE $end .

    $default  accept


state 23

   26 NT_NAMED_RIGHT_TYPE_EXPR: TM_IDENT .

    $default  reduce using rule 26 (NT_NAMED_RIGHT_TYPE_EXPR)


state 24

   31 NT_NAMED_RIGHT_TYPE_EXPR: TM_LEFT_PAREN . NT_NAMED_RIGHT_TYPE_EXPR TM_RIGHT_PAREN

    TM_IDENT       shift, and go to state 23
    TM_LEFT_PAREN  shift, and go to state 24
    TM_POINTER     shift, and go to state 25

    NT_NAMED_RIGHT_TYPE_EXPR  go to state 45


state 25

   27 NT_NAMED_RIGHT_TYPE_EXPR: TM_POINTER . NT_NAMED_RIGHT_TYPE_EXPR

    TM_IDENT       shift, and go to state 23
    TM_LEFT_PAREN  shift, and go to state 24
    TM_POINTER     shift, and go to state 25

    NT_NAMED_RIGHT_TYPE_EXPR  go to state 46


state 26

   28 NT_NAMED_RIGHT_TYPE_EXPR: NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET
   29                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   30                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN
   52 NT_GLOB_ITEM: NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR . TM_SEMICOL

    TM_LEFT_PAREN    shift, and go to state 47
    TM_LEFT_BRACKET  shift, and go to state 48
    TM_SEMICOL       shift, and go to state 49


state 27

   42 NT_GLOB_ITEM_LIST: NT_GLOB_ITEM NT_GLOB_ITEM_LIST .

    $default  reduce using rule 42 (NT_GLOB_ITEM_LIST)


state 28

    5 NT_LEFT_TYPE: TM_STRUCT TM_IDENT TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE
    7             | TM_STRUCT TM_IDENT TM_LEFT_BRACE . TM_RIGHT_BRACE
   43 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_LEFT_BRACE . TM_RIGHT_BRACE TM_SEMICOL
   44             | TM_STRUCT TM_IDENT TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL

    TM_IDENT        shift, and go to state 1
    TM_RIGHT_BRACE  shift, and go to state 50
    TM_STRUCT       shift, and go to state 18
    TM_UNION        shift, and go to state 19
    TM_ENUM         shift, and go to state 20
    TM_INTTYPE      shift, and go to state 6
    TM_CHARTYPE     shift, and go to state 7

    NT_LEFT_TYPE   go to state 31
    NT_FIELD_LIST  go to state 51


state 29

   45 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_SEMICOL .

    $default  reduce using rule 45 (NT_GLOB_ITEM)


state 30

    8 NT_LEFT_TYPE: TM_STRUCT TM_LEFT_BRACE TM_RIGHT_BRACE .

    $default  reduce using rule 8 (NT_LEFT_TYPE)


state 31

   18 NT_FIELD_LIST: NT_LEFT_TYPE . NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL
   19              | NT_LEFT_TYPE . NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL NT_FIELD_LIST

    TM_IDENT       shift, and go to state 23
    TM_LEFT_PAREN  shift, and go to state 24
    TM_POINTER     shift, and go to state 25

    NT_NAMED_RIGHT_TYPE_EXPR  go to state 52


state 32

    6 NT_LEFT_TYPE: TM_STRUCT TM_LEFT_BRACE NT_FIELD_LIST . TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 53


state 33

   10 NT_LEFT_TYPE: TM_UNION TM_IDENT TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE
   12             | TM_UNION TM_IDENT TM_LEFT_BRACE . TM_RIGHT_BRACE
   46 NT_GLOB_ITEM: TM_UNION TM_IDENT TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
   47             | TM_UNION TM_IDENT TM_LEFT_BRACE . TM_RIGHT_BRACE TM_SEMICOL

    TM_IDENT        shift, and go to state 1
    TM_RIGHT_BRACE  shift, and go to state 54
    TM_STRUCT       shift, and go to state 18
    TM_UNION        shift, and go to state 19
    TM_ENUM         shift, and go to state 20
    TM_INTTYPE      shift, and go to state 6
    TM_CHARTYPE     shift, and go to state 7

    NT_LEFT_TYPE   go to state 31
    NT_FIELD_LIST  go to state 55


state 34

   48 NT_GLOB_ITEM: TM_UNION TM_IDENT TM_SEMICOL .

    $default  reduce using rule 48 (NT_GLOB_ITEM)


state 35

   13 NT_LEFT_TYPE: TM_UNION TM_LEFT_BRACE TM_RIGHT_BRACE .

    $default  reduce using rule 13 (NT_LEFT_TYPE)


state 36

   11 NT_LEFT_TYPE: TM_UNION TM_LEFT_BRACE NT_FIELD_LIST . TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 56


state 37

   15 NT_LEFT_TYPE: TM_ENUM TM_IDENT TM_LEFT_BRACE . NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   50 NT_GLOB_ITEM: TM_ENUM TM_IDENT TM_LEFT_BRACE . NT_ENUM_ELE_LIST TM_RIGHT_BRACE TM_SEMICOL

    TM_IDENT  shift, and go to state 39

    NT_ENUM_ELE_LIST  go to state 57


state 38

   49 NT_GLOB_ITEM: TM_ENUM TM_IDENT TM_SEMICOL .

    $default  reduce using rule 49 (NT_GLOB_ITEM)


state 39

   24 NT_ENUM_ELE_LIST: TM_IDENT .
   25                 | TM_IDENT . TM_COMMA NT_ENUM_ELE_LIST

    TM_COMMA  shift, and go to state 58

    $default  reduce using rule 24 (NT_ENUM_ELE_LIST)


state 40

   16 NT_LEFT_TYPE: TM_ENUM TM_LEFT_BRACE NT_ENUM_ELE_LIST . TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 59


state 41

    5 NT_LEFT_TYPE: TM_STRUCT TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
    7             | TM_STRUCT TM_IDENT . TM_LEFT_BRACE TM_RIGHT_BRACE
    9             | TM_STRUCT TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 60

    $default  reduce using rule 9 (NT_LEFT_TYPE)


state 42

   10 NT_LEFT_TYPE: TM_UNION TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   12             | TM_UNION TM_IDENT . TM_LEFT_BRACE TM_RIGHT_BRACE
   14             | TM_UNION TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 61

    $default  reduce using rule 14 (NT_LEFT_TYPE)


state 43

   15 NT_LEFT_TYPE: TM_ENUM TM_IDENT . TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   17             | TM_ENUM TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 62

    $default  reduce using rule 17 (NT_LEFT_TYPE)


state 44

   28 NT_NAMED_RIGHT_TYPE_EXPR: NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET
   29                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   30                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN
   51 NT_GLOB_ITEM: TM_TYPEDEF NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR . TM_SEMICOL

    TM_LEFT_PAREN    shift, and go to state 47
    TM_LEFT_BRACKET  shift, and go to state 48
    TM_SEMICOL       shift, and go to state 63


state 45

   28 NT_NAMED_RIGHT_TYPE_EXPR: NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET
   29                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   30                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN
   31                         | TM_LEFT_PAREN NT_NAMED_RIGHT_TYPE_EXPR . TM_RIGHT_PAREN

    TM_LEFT_PAREN    shift, and go to state 47
    TM_RIGHT_PAREN   shift, and go to state 64
    TM_LEFT_BRACKET  shift, and go to state 48


state 46

   27 NT_NAMED_RIGHT_TYPE_EXPR: TM_POINTER NT_NAMED_RIGHT_TYPE_EXPR .
   28                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET
   29                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   30                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN    shift, and go to state 47
    TM_LEFT_BRACKET  shift, and go to state 48

    $default  reduce using rule 27 (NT_NAMED_RIGHT_TYPE_EXPR)


state 47

   29 NT_NAMED_RIGHT_TYPE_EXPR: NT_NAMED_RIGHT_TYPE_EXPR TM_LEFT_PAREN . NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   30                         | NT_NAMED_RIGHT_TYPE_EXPR TM_LEFT_PAREN . TM_RIGHT_PAREN

    TM_IDENT        shift, and go to state 1
    TM_RIGHT_PAREN  shift, and go to state 65
    TM_STRUCT       shift, and go to state 18
    TM_UNION        shift, and go to state 19
    TM_ENUM         shift, and go to state 20
    TM_INTTYPE      shift, and go to state 6
    TM_CHARTYPE     shift, and go to state 7

    NT_LEFT_TYPE           go to state 66
    NT_ARGUMENT_TYPE_LIST  go to state 67


state 48

   28 NT_NAMED_RIGHT_TYPE_EXPR: NT_NAMED_RIGHT_TYPE_EXPR TM_LEFT_BRACKET . TM_NAT TM_RIGHT_BRACKET

    TM_NAT  shift, and go to state 68


state 49

   52 NT_GLOB_ITEM: NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL .

    $default  reduce using rule 52 (NT_GLOB_ITEM)


state 50

    7 NT_LEFT_TYPE: TM_STRUCT TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE .
   43 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE . TM_SEMICOL

    TM_SEMICOL  shift, and go to state 69

    $default  reduce using rule 7 (NT_LEFT_TYPE)


state 51

    5 NT_LEFT_TYPE: TM_STRUCT TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST . TM_RIGHT_BRACE
   44 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST . TM_RIGHT_BRACE TM_SEMICOL

    TM_RIGHT_BRACE  shift, and go to state 70


state 52

   18 NT_FIELD_LIST: NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR . TM_SEMICOL
   19              | NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR . TM_SEMICOL NT_FIELD_LIST
   28 NT_NAMED_RIGHT_TYPE_EXPR: NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET
   29                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   30                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN    shift, and go to state 47
    TM_LEFT_BRACKET  shift, and go to state 48
    TM_SEMICOL       shift, and go to state 71


state 53

    6 NT_LEFT_TYPE: TM_STRUCT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE .

    $default  reduce using rule 6 (NT_LEFT_TYPE)


state 54

   12 NT_LEFT_TYPE: TM_UNION TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE .
   47 NT_GLOB_ITEM: TM_UNION TM_IDENT TM_LEFT_BRACE TM_RIGHT_BRACE . TM_SEMICOL

    TM_SEMICOL  shift, and go to state 72

    $default  reduce using rule 12 (NT_LEFT_TYPE)


state 55

   10 NT_LEFT_TYPE: TM_UNION TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST . TM_RIGHT_BRACE
   46 NT_GLOB_ITEM: TM_UNION TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST . TM_RIGHT_BRACE TM_SEMICOL

    TM_RIGHT_BRACE  shift, and go to state 73


state 56

   11 NT_LEFT_TYPE: TM_UNION TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE .
